--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,12 @@
         "**/.hg": true,
         "**/CVS": true,
         "**/.DS_Store": true,
-        "**/Thumbs.db": true
+        "**/Thumbs.db": true,
+        "CNAME": true,
+        "534F5280C1B7751A9703F037103C723923547B44554D.ico": true
     },
-    "hide-files.files": []
+    "hide-files.files": [
+        "CNAME",
+        "534F5280C1B7751A9703F037103C723923547B44554D.ico"
+    ]
 }
